Refactor HTML pages and CSS styles for better organization.
Reorganized HTML pages and CSS files by moving them to respective locations under the newly created "partials" directory. Added additional styles and pages for improved structure and maintainability.

--- a/src/about.html
+++ b/src/about.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home - Azzeddine Habib's Portfolio</title>
+    <title>About Me - Azzeddine Habib</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -13,6 +12,7 @@
         <div class="container">
             <h1 class="logo">Azzeddine Habib</h1>
             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
@@ -23,11 +23,10 @@
 </header>
 
 <main>
-    <section id="hero" class="hero">
+    <section class="about">
         <div class="container">
-            <h2>Hello, I'm Azzeddine</h2>
-            <p>Passionate about creativity, technology, and on my way to becoming a computer technician.</p>
-            <a href="projects.html" class="btn">View My Projects</a>
+            <h2>About Me</h2>
+            <p>Hello! I'm Azzeddine Habib, a creative and tech-savvy individual passionate about learning and innovating. My journey is driven by curiosity and a constant desire to improve my technical skills. I thrive on bringing ideas to life and solving problems with technology.</p>
         </div>
     </section>
 </main>
