--- a/src/skills.html
+++ b/src/skills.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home - Azzeddine Habib's Portfolio</title>
+    <title>Skills - Azzeddine Habib</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -13,6 +12,7 @@
         <div class="container">
             <h1 class="logo">Azzeddine Habib</h1>
             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
@@ -23,11 +23,15 @@
 </header>
 
 <main>
-    <section id="hero" class="hero">
+    <section class="skills">
         <div class="container">
-            <h2>Hello, I'm Azzeddine</h2>
-            <p>Passionate about creativity, technology, and on my way to becoming a computer technician.</p>
-            <a href="projects.html" class="btn">View My Projects</a>
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>Technical problem solving</li>
+                <li>Hardware installation and configuration</li>
+                <li>Creative design</li>
+            </ul>
         </div>
     </section>
 </main>
