--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home - Azzeddine Habib's Portfolio</title>
+    <title>Home - Azzeddine Habib's Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/favicon/favicon.ico">
 </head>
 <body>
+<div id="intro-animation" class="intro-animation">
+    <h1>Welcome to Azzeddine Habib's Portfolio</h1>
+</div>
+
 <header>
     <nav>
         <div class="container">
             <h1 class="logo">Azzeddine Habib</h1>
             <ul class="nav-links">
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="html/about.html">About</a></li>
+                <li><a href="html/projects.html">Projects</a></li>
+                <li><a href="html/skills.html">Skills</a></li>
+                <li><a href="html/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -25,17 +30,24 @@
 <main>
     <section id="hero" class="hero">
         <div class="container">
+            <div class="image-border">
+                <img class="image" src="img/1736438546991.jpg" alt="Creator of website">
+            </div>
             <h2>Hello, I'm Azzeddine</h2>
             <p>Passionate about creativity, technology, and on my way to becoming a computer technician.</p>
-            <a href="projects.html" class="btn">View My Projects</a>
+            <a href="html/projects.html" class="btn">View My Projects</a>
         </div>
     </section>
 </main>
 
 <footer>
     <div class="container">
-        <p>Desgined with 💖 by Azzeddine Habib</p>
+        <p>Designed with
+            <img src="img/gif/miss-you-heart.gif" alt="A heartbeating heart" style="vertical-align: middle; width: 30px; height: 30px;">
+            by Azzeddine Habib
+        </p>
     </div>
 </footer>
+<script src="javascript/main.js"></script>
 </body>
 </html>
