Update and organize portfolio project
- Updated HTML files: about.html, contact.html, index.html, projects.html, and skills.html.
- Improved and Added CSS structure: main.css, sections.css, icons.css, and testimonials.css.
- Added and Enhanced interactivity with JavaScript: intro-animation.js and dynamic-testimonials.js.
- Added visual assets: lines-pattern.png.
- Organized and cleaned up project structure for better maintainability.

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -45,7 +45,10 @@
 
 <footer>
     <div class="container">
-        <p>Desgined with 💖 by Azzeddine Habib</p>
+        <p>Designed with
+            <img src="../img/gif/miss-you-heart.gif" alt="A heartbeating heart" style="vertical-align: middle; width: 30px; height: 30px;">
+            by Azzeddine Habib
+        </p>
     </div>
 </footer>
 </body>
