--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="img/favicon/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <div id="intro-animation" class="intro-animation">
@@ -31,11 +32,72 @@
     <section id="hero" class="hero">
         <div class="container">
             <div class="image-border">
-                <img class="image" src="img/1736438546991.jpg" alt="Creator of website">
+                <img class="image" src="img/1736438546991.jpg" alt="Creator of the website">
             </div>
             <h2>Hello, I'm Azzeddine</h2>
             <p>Passionate about creativity, technology, and on my way to becoming a computer technician.</p>
-            <a href="html/projects.html" class="btn">View My Projects</a>
+            <a href="#" class="btn">Download Resume</a>
+        </div>
+    </section>
+
+    <section class="quick-sections">
+        <div class="section">
+            <h3>Projects</h3>
+            <p>Explore my highlighted work</p>
+            <a href="html/projects.html" class="btn">Learn more</a>
+        </div>
+        <div class="section">
+            <h3>About Me</h3>
+            <p>Learn more about my experience</p>
+            <a href="html/about.html" class="btn" >Learn more</a>
+        </div>
+        <div class="section">
+            <h3>Contact</h3>
+            <p>Get in touch for collaborations</p>
+            <a href="html/contact.html" class="btn" >Learn more</a>
+        </div>
+    </section>
+
+    <section class="testimonials">
+        <h2>Testimonials</h2>
+        <div id="testimonials-container">
+            <div class="testimonial active">
+                <p>"A great professional, very dedicated and creative in his work."</p>
+                <small>- Client A</small>
+            </div>
+            <div class="testimonial">
+                <p>"The best technician I've worked with, excellent attention to detail."</p>
+                <small>- Client B</small>
+            </div>
+            <div class="testimonial">
+                <p>"Exceeded all my expectations, I would recommend him without hesitation."</p>
+                <small>- Client C</small>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="content">
+            <h2>Contact Me</h2>
+            <div class="info">
+                <div>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Montmelo, Barcelona, Spain</p>
+                </div>
+                <div>
+                    <i class="fas fa-phone-alt"></i>
+                    <p>+34 613 47 38 32</p>
+                </div>
+                <div>
+                    <i class="fas fa-envelope"></i>
+                    <p>shado1siratchi9business8@gmail.com</p>
+                </div>
+            </div>
+            <div class="social">
+                <a href="https://github.com/Siratchi-Business" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/azzeddine-habib-79580a232/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/1siratchi.9business8/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
     </section>
 </main>
