Improve HTML files and Add a new Javascript File (projects-api.js)

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -27,7 +27,27 @@
     <section class="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I'm Azzeddine Habib, a creative and tech-savvy individual passionate about learning and innovating. My journey is driven by curiosity and a constant desire to improve my technical skills. I thrive on bringing ideas to life and solving problems with technology.</p>
+            <div class="about-content">
+                <img src="../img/profile.jpg" alt="Azzeddine Habib" class="profile-img">
+                <div class="about-text">
+                    <p><strong>Who am I?</strong> I'm Azzeddine Habib, a creative and tech-savvy individual with a passion for solving problems and bringing ideas to life through technology. I'm constantly learning, improving, and challenging myself to reach new heights.</p>
+                    <p><strong>My Values and Principles:</strong> I believe in integrity, collaboration, and perseverance. These principles guide every project I work on, ensuring that I approach challenges with an open mind and a commitment to excellence.</p>
+                    <p><strong>Why This Matters to Me:</strong> Technology has the power to transform lives, and I find deep fulfillment in creating solutions that are innovative and impactful. As an aspiring computer technician, I strive to bridge the gap between creativity and functionality to deliver value to those I work with.</p>
+                    <p><strong>My Journey:</strong> My journey began with an innate curiosity about how things work. Over the years, I have explored various aspects of technology, from hardware troubleshooting to web development, and each step has solidified my passion for this field. Every challenge I’ve faced has been an opportunity to grow, and I am excited to continue this path toward becoming a skilled professional.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="details">
+        <div class="container">
+            <h3>What I Offer</h3>
+            <ul class="details-list">
+                <li>🌟 Strong problem-solving skills and a growth mindset</li>
+                <li>💻 Expertise in building responsive web designs</li>
+                <li>🛠️ A passion for troubleshooting and technical support</li>
+                <li>✨ Commitment to creating innovative and user-friendly solutions</li>
+            </ul>
         </div>
     </section>
 </main>
