--- a/src/html/skills.html
+++ b/src/html/skills.html
@@ -26,13 +26,29 @@
 <main>
     <section class="skills">
         <div class="container">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>Technical problem solving</li>
-                <li>Hardware installation and configuration</li>
-                <li>Creative design</li>
-            </ul>
+            <h2>My Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <h3>Frontend Development</h3>
+                    <p>HTML, CSS, JavaScript</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Backend Development</h3>
+                    <p>Java, Python, Lua, Pawn</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Technical Problem Solving</h3>
+                    <p>Diagnose and fix hardware and software issues efficiently.</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Hardware Expertise</h3>
+                    <p>Installation, configuration, and maintenance of hardware systems.</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Creative Design</h3>
+                    <p>Crafting visually appealing and user-friendly designs.</p>
+                </div>
+            </div>
         </div>
     </section>
 </main>
