--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -27,22 +27,8 @@
     <section class="projects">
         <div class="container">
             <h2>Projects</h2>
-            <div class="project-grid">
-                <div class="project-item">
-                    <h3>Project 1</h3>
-                    <p>Brief description of Project 1.</p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div class="project-item">
-                    <h3>Project 2</h3>
-                    <p>Brief description of Project 2.</p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div class="project-item">
-                    <h3>Project 3</h3>
-                    <p>Brief description of Project 3.</p>
-                    <a href="#">Learn More</a>
-                </div>
+            <div class="project-grid" id="project-grid">
+                <!-- Los proyectos se cargarán aquí dinámicamente -->
             </div>
         </div>
     </section>
@@ -56,5 +42,6 @@
         </p>
     </div>
 </footer>
+
 </body>
 </html>
