Add dynamic projects preview on the page "projects.html" and edit quick sections

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -6,6 +6,7 @@
     <title>Projects - Azzeddine Habib</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../img/favicon/favicon.ico">
+    <script src="../javascript/main.js"></script>
 </head>
 <body>
 <header>
@@ -28,7 +29,7 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project-grid" id="project-grid">
-                <!-- Los proyectos se cargarán aquí dinámicamente -->
+
             </div>
         </div>
     </section>
