--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 <div id="intro-animation" class="intro-animation">
-    <h1>Welcome to Azzeddine Habib's Portfolio</h1>
+    <h1>
+        👋 Welcome to Azzeddine Habib's Portfolio 💼
+    </h1>
 </div>
 
 <header>
@@ -37,25 +39,25 @@
             <a href="#" class="btn">Download Resume</a>
         </div>
     </section>
-
     <section class="quick-sections">
         <div class="section">
-            <h3>Projects</h3>
+            <h3>📂</h3>
             <p>Explore my highlighted work</p>
             <a href="html/projects.html" class="btn">Learn more</a>
         </div>
         <div class="section">
-            <h3>About Me</h3>
+            <h3>💁🏽‍♂️</h3>
             <p>Learn more about my experience</p>
             <a href="html/about.html" class="btn" >Learn more</a>
         </div>
         <div class="section">
-            <h3>Contact</h3>
+            <h3>📲</h3>
             <p>Get in touch for collaborations</p>
             <a href="html/contact.html" class="btn" >Learn more</a>
         </div>
     </section>
-
+    <br>
+    <!--
     <section class="testimonials">
         <h2>Testimonials</h2>
         <div id="testimonials-container">
@@ -73,10 +75,12 @@
             </div>
         </div>
     </section>
-
+    -->
     <section class="contact">
         <div class="content">
-            <h2>Contact Me</h2>
+            <h2>Contact</h2>
+            <br>
+            <br>
             <div class="info">
                 <div>
                     <i class="fas fa-map-marker-alt"></i>
@@ -91,6 +95,7 @@
                     <p>shado1siratchi9business8@gmail.com</p>
                 </div>
             </div>
+            <br>
             <div class="social">
                 <a href="https://github.com/Siratchi-Business" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/azzeddine-habib-79580a232/" target="_blank"><i class="fab fa-linkedin"></i></a>
