Separate backend and frontend into different repositories, fix project links, remove testimonials section
- Separated backend and frontend into their own repositories for better maintainability and scalability.
- Fixed incorrect repository links by replacing `project.url` with `project.html_url`.
- Removed the testimonials section as it was deemed unnecessary.

This improves project organization, ensures proper linking to GitHub repositories, and simplifies the UI.

--- a/src/index.html
+++ b/src/index.html
@@ -57,25 +57,6 @@
         </div>
     </section>
     <br>
-    <!--
-    <section class="testimonials">
-        <h2>Testimonials</h2>
-        <div id="testimonials-container">
-            <div class="testimonial active">
-                <p>"A great professional, very dedicated and creative in his work."</p>
-                <small>- Client A</small>
-            </div>
-            <div class="testimonial">
-                <p>"The best technician I've worked with, excellent attention to detail."</p>
-                <small>- Client B</small>
-            </div>
-            <div class="testimonial">
-                <p>"Exceeded all my expectations, I would recommend him without hesitation."</p>
-                <small>- Client C</small>
-            </div>
-        </div>
-    </section>
-    -->
     <section class="contact">
         <div class="content">
             <h2>Contact</h2>
@@ -84,7 +65,7 @@
             <div class="info">
                 <div>
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Montmelo, Barcelona, Spain</p>
+                    <p>Barcelona, Spain</p>
                 </div>
                 <div>
                     <i class="fas fa-phone-alt"></i>
