Update overall page design: Improved layout, card styles, and user interactions.

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Azzeddine Habib</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../img/favicon/favicon.ico">
 </head>
@@ -11,7 +12,7 @@
 <header>
     <nav>
         <div class="container">
-            <h1 class="logo">Azzeddine Habib</h1>
+            <a href="../index.html"><img src="../img/logo.jpg" alt="Logo website" class="logo"></a>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -48,6 +49,19 @@
                 <li>🛠️ A passion for troubleshooting and technical support</li>
                 <li>✨ Commitment to creating innovative and user-friendly solutions</li>
             </ul>
+        </div>
+    </section>
+    <section>
+        <div class="social-icons">
+            <a href="https://github.com/Siratchi-Business" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/azzeddine-habib-79580a232/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/1siratchi.9business8/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
     </section>
 </main>
