--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Azzeddine Habib's Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="javascript/main.js"></script>
@@ -20,7 +19,7 @@
 <header>
     <nav>
         <div class="container">
-            <h1 class="logo">Azzeddine Habib</h1>
+            <a href="./index.html"><img src="img/logo.jpg" alt="Logo website" class="logo"></a>
             <ul class="nav-links">
                 <li><a href="html/about.html">About</a></li>
                 <li><a href="html/projects.html">Projects</a></li>
@@ -43,17 +42,17 @@
         <div class="section">
             <h3>📂</h3>
             <p>Explore my highlighted work</p>
-            <a href="html/projects.html" class="btn">Learn more</a>
+            <a href="html/projects.html" class="btn">More</a>
         </div>
         <div class="section">
             <h3>💁🏽‍♂️</h3>
-            <p>Learn more about my experience</p>
-            <a href="html/about.html" class="btn" >Learn more</a>
+            <p>Learn about my experience</p>
+            <a href="html/about.html" class="btn" >More</a>
         </div>
         <div class="section">
             <h3>📲</h3>
             <p>Get in touch for collaborations</p>
-            <a href="html/contact.html" class="btn" >Learn more</a>
+            <a href="html/contact.html" class="btn" >More</a>
         </div>
     </section>
     <br>
@@ -76,12 +75,19 @@
                     <p>shado1siratchi9business8@gmail.com</p>
                 </div>
             </div>
-            <br>
-            <div class="social">
-                <a href="https://github.com/Siratchi-Business" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/azzeddine-habib-79580a232/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/1siratchi.9business8/" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
+        </div>
+    </section>
+    <section>
+        <div class="social-icons">
+            <a href="https://github.com/Siratchi-Business" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/azzeddine-habib-79580a232/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/1siratchi.9business8/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
     </section>
 </main>
