--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../img/favicon/favicon.ico">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374805345300543"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
