--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../img/favicon/favicon.ico">
     <script src="../javascript/main.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374805345300543"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
