--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="javascript/main.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374805345300543"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="intro-animation" class="intro-animation">
