Add dark mode and a inverted log

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 <li><a href="html/projects.html">Projects</a></li>
                 <li><a href="html/skills.html">Skills</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
+                <li><button onclick="toggleDarkMode()" class="dark-mode-toggle">🌙</button></li>
             </ul>
         </div>
     </nav>
 </header>
+
 
 <main>
     <section id="hero" class="hero">
