Add SEO and finalize details to enable Google AdSense

--- a/index.html
+++ b/index.html
@@ -7,11 +7,30 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="javascript/main.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374805345300543"
             crossorigin="anonymous"></script>
+    <script type="module" src="javascript/main.js" defer></script>
+    <meta name="google-site-verification" content="pJ-5p1sU7na4AbR0M9PiHVGCWwTy99yXinoRKMzzRCU" />
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2NHLXE56J"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-Q2NHLXE56J');
+        </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KGWMVV2N');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGWMVV2N"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="intro-animation" class="intro-animation">
     <h1>
         👋 Welcome to Azzeddine Habib's Portfolio 💼
@@ -27,7 +46,7 @@
                 <li><a href="html/projects.html">Projects</a></li>
                 <li><a href="html/skills.html">Skills</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
-                <li><button onclick="toggleDarkMode()" class="dark-mode-toggle">🌙</button></li>
+                <li><button class="dark-mode-toggle">🌙</button></li>
             </ul>
         </div>
     </nav>
